namespace Game.MinigameFramework.Scripts.Framework.Input {
    public static class PawnAction {
        public const string Move = "Move";
        public const string Look = "Look";
        public const string ButtonA = "ButtonA";
        public const string ButtonB = "ButtonB";
        public const string ButtonX = "ButtonX";
        public const string ButtonY = "ButtonY";
        public const string ButtonL = "ButtonL";
        public const string ButtonR = "ButtonR";
    }
}